# toast-napi-v2-prototype

./: .gitignore  Cargo.toml  README.md  file-to-force-release.txt  package-lock.json  package.json
.github/workflows/: CI.yml
test-site/: .gitignore  package.json  postinstall.js  toast.js
test-site/content/: three-post.mdx  two-post.mdx
toast-cli/: package.json  toast-cli.js  toast-cli.mjs
toast-cli/src/: loader.js  render.js
toast-tools-mdx/: index.js  package.json
toastnapi/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  rustfmt.toml
toastnapi/npm/darwin-arm64/: README.md  package.json
toastnapi/npm/darwin-x64/: README.md  package.json
toastnapi/npm/linux-x64-gnu/: README.md  package.json
toastnapi/npm/win32-x64-msvc/: README.md  package.json
toastnapi/src/: lib.rs
